<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="application_name_generic">Gadgetbridge</string>
    <string name="title_activity_controlcenter_generic">Gadgetbridge</string>
    <string name="about_activity_title_generic">About Gadgetbridge</string>
    <string name="about_description_generic">Cloudless copylefted libre replacement for closed source Android gadget apps from vendors.</string>
    <string name="gadgetbridge_running_generic">Gadgetbridge running</string>
    <string name="application_name_banglejs_main">Bangle.js Gadgetbridge</string>
    <string name="title_activity_controlcenter_banglejs_main">Bangle.js Gadgetbridge</string>
    <string name="about_activity_title_banglejs_main">About Bangle.js Gadgetbridge</string>
    <string name="about_description_banglejs_main">Android companion app for Bangle.js built on top of the Gadgetbridge project, with added Internet Access.\n\nDue to Google Play Store policies, we are not allowed a donation link in the app itself, but if you like this app please consider donating via the Gadgetbridge homepage below.</string>
    <string name="gadgetbridge_running_banglejs_main">Bangle.js running</string>
    <string name="application_name_banglejs_nightly">Bangle.js Gadgetbridge (Nightly)</string>
    <string name="title_activity_controlcenter_banglejs_nightly">Bangle.js Gadgetbridge (Nightly)</string>
    <string name="about_activity_title_banglejs_nightly">About Bangle.js Gadgetbridge (Nightly)</string>
    <string name="about_description_banglejs_nightly">Android companion app for Bangle.js built on top of the Gadgetbridge project, with added Internet Access.\n\nDue to Google Play Store policies, we are not allowed a donation link in the app itself, but if you like this app please consider donating via the Gadgetbridge homepage below.</string>
    <string name="gadgetbridge_running_banglejs_nightly">Nightly Bangle.js running</string>
    <string name="application_name_main_nightly">Gadgetbridge (Nightly)</string>
    <string name="appmananger_app_delete">Delete</string>
    <string name="appmananger_app_delete_cache">Delete and remove from cache</string>
    <string name="appmananger_app_reinstall">Reinstall</string>
    <string name="appmanager_app_openinstore">Search in Pebble appstore</string>
    <string name="appmanager_health_activate">Activate</string>
    <string name="appmanager_health_deactivate">Deactivate</string>
    <string name="appmanager_hrm_activate">Activate HRM</string>
    <string name="appmanager_hrm_deactivate">Deactivate HRM</string>
    <string name="appmanager_weather_activate">Activate System Weather app</string>
    <string name="appmanager_weather_deactivate">Deactivate System Weather app</string>
    <string name="appmanager_weather_install_provider">Install the Weather Notification app</string>
    <string name="app_configure">Configure</string>
    <string name="pref_header_general">General settings</string>
    <string name="pref_title_general_autoconnectonbluetooth">Connect to Gadgetbridge device when Bluetooth is turned on</string>
    <string name="pref_title_general_autostartonboot">Start automatically</string>
    <string name="pref_title_mb_intents">Broadcast Media Button Intents Directly</string>
    <string name="pref_summary_mb_intents">Enable if device media control is not working for certain applications</string>
    <string name="pref_title_audio_player">Preferred Audioplayer</string>
    <string name="pref_header_datetime">Date and Time</string>
    <string name="pref_title_datetime_syctimeonconnect">Sync time</string>
    <string name="pref_summary_datetime_syctimeonconnect">Sync time to Gadgetbridge device when connecting, and when time or time zone changes on Android device</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_theme_black_background">Use black background in Dark Theme</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_title_whenscreenon">…also when screen is on</string>
    <string name="pref_title_banglejs_text_bitmap">Text as Bitmaps</string>
    <string name="pref_summary_banglejs_text_bitmap">If a word cannot be rendered with the watch\'s font, render it to a bitmap in Gadgetbridge and display the bitmap on the watch</string>
    <string name="pref_title_banglejs_txt_bitmap_size">Text Bitmaps Size</string>
    <string name="pref_summary_banglejs_txt_bitmap_size">Size to use for bitmap text rendering</string>
    <string name="pref_title_banglejs_phone_gps_enbale">Use phone gps data</string>
    <string name="pref_summary_banglejs_phone_gps_enbale">Use the gps data of the phone to overwrite the gps data of the bangle device</string>
    <string name="pref_title_banglejs_phone_gps_network_only">Only use network to determine location</string>
    <string name="pref_summary_banglejs_phone_gps_network_only">Use only the network provider to determine the location. This reduces the power consumption at the cost of accuracy. A reconnection is needed.</string>
    <string name="pref_title_banglejs_phone_gps_update_interval">GPS data update interval</string>
    <string name="pref_summary_banglejs_phone_gps_update_interval">The interval for how often the gps position is being updated, in ms</string>
    <string name="pref_title_banglejs_webview_url">App loader URL</string>
    <string name="pref_summary_banglejs_webview_url">If you want a custom app loader put your https://…/android.html URL here. Otherwise leave blank for https://banglejs.com/apps</string>
    <string name="pref_title_rtl">Right-To-Left</string>
    <string name="pref_summary_rtl">Enable this if your device can not show right-to-left languages</string>
    <string name="pref_rtl_max_line_length">Right-To-Left Max Line Length</string>
    <string name="pref_rtl_max_line_length_summary">Lengthens or shortens the lines Right-To-Left text is separated into</string>
    <string name="pref_title_weather">Weather</string>
    <string name="pref_title_weather_location">Weather location (for LineageOS weather provider)</string>
    <string name="pref_title_weather_summary">Used for the LineageOS weather provider, other Android versions need to use an app like \"Weather notification\". Find more information in the Gadgetbridge wiki.</string>
    <string name="pref_header_development">Developer options</string>
    <string name="pref_header_intent_api">Intent API</string>
    <string name="pref_title_pebble_settings">Pebble settings</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_header_navigation">Navigation</string>
    <string name="pref_title_location_aquire">Acquire location</string>
    <string name="pref_title_location_latitude">Latitude</string>
    <string name="pref_title_location_longitude">Longitude</string>
    <string name="pref_title_location_keep_uptodate">Keep location updated</string>
    <string name="pref_summary_location_keep_uptodate">Try to get the current location at runtime, use the stored location as fallback</string>
    <string name="pref_display_add_device_fab">Connect new device button</string>
    <string name="pref_display_add_device_fab_on">Always visible</string>
    <string name="pref_display_add_device_fab_off">Visible only if no device is added</string>
    <string name="pref_title_unit_system">Units</string>
    <string name="zetime_title_settings">ZeTime settings</string>
    <string name="pref_header_auto_export">Auto export</string>
    <string name="pref_title_auto_export_enabled">Auto export enabled</string>
    <string name="pref_title_auto_export_location">Export location</string>
    <string name="pref_title_auto_export_interval">Export interval</string>
    <string name="pref_summary_auto_export_interval">Export every %d hour</string>
    <string name="pref_header_auto_fetch">Auto fetch</string>
    <string name="pref_auto_fetch">Auto fetch activity data</string>
    <string name="pref_auto_fetch_summary">Fetch happens upon screen unlock. Only works if a lock mechanism is set!</string>
    <string name="pref_auto_fetch_limit_fetches">Minimum time between fetches</string>
    <string name="pref_auto_fetch_limit_fetches_summary">Fetches every %d minutes</string>
    <string name="preferences_category_device_specific_settings">Device specific settings</string>
    <string name="pref_write_logfiles">Write log files</string>
    <string name="pref_cache_weather">Cache weather information</string>
    <string name="pref_cache_weather_summary">Weather information will be cached across application restarts.</string>
    <string name="activity_prefs_about_you">About you</string>
    <string name="activity_prefs_charts">Chart settings</string>
    <string name="activity_prefs_discovery_pairing">Discovery and Pairing options</string>
    <string name="pref_title_contextual_arabic">Contextual Arabic</string>
    <string name="pref_summary_contextual_arabic">Enable this to support contextual Arabic</string>
    <string name="preferences_rtl_settings">Right To Left Support</string>
    <string name="language_and_region_prefs">Language and region settings</string>
    <string name="pref_check_permission_status">Check permission status</string>
    <string name="pref_check_permission_status_summary">Check and ask for missing permissions even when they might not be instantly needed. Disable this only if your devices actually doesn\'t support any of these features. Not granting a permission might cause issues!</string>
    <string name="pref_show_changelog">Show changelog on startup</string>
    <string name="pref_show_changelog_summary">Display the changelog since last version after Gadgetbridge is updated</string>
    <string name="pref_title_opentracks_packagename">OpenTracks package name</string>
    <string name="pref_summary_opentracks_packagename">Used for starting/stopping GPS track recording in external fitness app.</string>
    <string name="pref_summary_navigation_forward">Forward instructions from navigation apps to the watch</string>
    <string name="pref_title_navigation_forward">Send navigation to watch</string>
    <string name="activity_prefs_allow_bluetooth_intent_api">Bluetooth Intent API</string>
    <string name="activity_prefs_summary_allow_bluetooth_intent_api">Allow controlling Bluetooth connection via Intent API</string>
    <string name="intent_api_allow_activity_sync_title">Allow activity sync trigger</string>
    <string name="intent_api_allow_activity_sync_summary">Allow triggering activity sync via Intent API</string>
    <string name="intent_api_allow_trigger_export_title">Allow database export</string>
    <string name="intent_api_allow_trigger_export_summary">Allow triggering database export via Intent API</string>
    <string name="intent_api_broadcast_export_title">Broadcast on database export</string>
    <string name="intent_api_broadcast_export_summary">Broadcast an intent when database export finishes</string>
    <string name="intent_api_allow_debug_commands_title">Allow Debug Commands</string>
    <string name="intent_api_allow_debug_commands_summary">Allow triggering debug menu commands via Intent API</string>
    <string name="pref_theme_dynamic_colors_explanation">Note: for the dynamic colors theme you need to enable Wallpaper Colors or Color Palette in your Android 12+ appearance settings. If you don\'t, Gadgetbridge will use the default Material 3 colors.</string>
    <string name="pref_title_osmand_packagename">OsmAnd package name</string>
    <string name="pref_summary_osmand_packagename">Used for selecting the version of OsmAnd to connect to</string>
    <string name="pref_title_navigation_prefs">Navigation preferences</string>
    <string name="pref_title_navigation_apps">Navigation apps</string>
    <string name="pref_navigation_app_osmand">OsmAnd(+)</string>
    <string name="pref_navigation_app_gmaps">Google Maps</string>
</resources>