<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/appmanager_app_reinstall"
        android:title="@string/appmananger_app_reinstall"/>
    <item
        android:id="@+id/appmanager_app_delete"
        android:title="@string/appmananger_app_delete"/>
    <item
        android:id="@+id/appmanager_app_delete_cache"
        android:title="@string/appmananger_app_delete_cache"/>
    <item
        android:id="@+id/appmanager_health_activate"
        android:title="@string/appmanager_health_activate"/>
    <item
        android:id="@+id/appmanager_health_deactivate"
        android:title="@string/appmanager_health_deactivate"/>
    <item
        android:id="@+id/appmanager_hrm_activate"
        android:title="@string/appmanager_hrm_activate"/>
    <item
        android:id="@+id/appmanager_hrm_deactivate"
        android:title="@string/appmanager_hrm_deactivate"/>
    <item
        android:id="@+id/appmanager_weather_activate"
        android:title="@string/appmanager_weather_activate" />
    <item
        android:id="@+id/appmanager_weather_deactivate"
        android:title="@string/appmanager_weather_deactivate" />
    <item
        android:id="@+id/appmanager_weather_install_provider"
        android:title="@string/appmanager_weather_install_provider" />
    <item
        android:id="@+id/appmanager_app_configure"
        android:title="@string/app_configure"/>
    <item
        android:id="@+id/appmanager_app_openinstore"
        android:title="@string/appmanager_app_openinstore"/>
</menu>