<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">
    <PreferenceCategory
        android:key="pref_key_general"
        android:title="@string/pref_header_general"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="general_autostartonboot"
            android:layout="@layout/preference_checkbox"
            android:title="@string/pref_title_general_autostartonboot"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="general_autoconnectonbluetooth"
            android:layout="@layout/preference_checkbox"
            android:title="@string/pref_title_general_autoconnectonbluetooth"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="general_reconnectonlytoconnected"
            android:layout="@layout/preference_checkbox"
            android:title="@string/pref_title_general_reconnectonlytoconnected"
            android:summary="@string/pref_summary_general_reconnectonlytoconnected"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="display_add_device_fab"
            android:layout="@layout/preference_checkbox"
            android:summaryOff="@string/pref_display_add_device_fab_off"
            android:summaryOn="@string/pref_display_add_device_fab_on"
            android:title="@string/pref_display_add_device_fab"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="display_bottom_navigation_bar"
            android:layout="@layout/preference_checkbox"
            android:summaryOff="@string/pref_summary_bottom_navigation_bar_off"
            android:summaryOn="@string/pref_summary_bottom_navigation_bar_on"
            android:title="@string/pref_title_bottom_navigation_bar"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="mb_intents"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_mb_intents"
            android:title="@string/pref_title_mb_intents"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="default"
            android:dependency="mb_intents"
            android:key="audio_player"
            android:summary="%s"
            android:title="@string/pref_title_audio_player"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_category_dashboard"
            android:title="@string/bottom_nav_dashboard"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_category_sleepasandroid"
            android:title="@string/sleepasandroid_settings"
            app:iconSpaceReserved="false" />

        <PreferenceScreen
            android:key="pref_screen_theme"
            android:title="@string/pref_title_theme"
            app:iconSpaceReserved="false">
            <ListPreference
                android:defaultValue="@string/pref_theme_value_light"
                android:entries="@array/pref_theme_options"
                android:entryValues="@array/pref_theme_values"
                android:key="pref_key_theme"
                android:summary="%s"
                android:title="@string/pref_title_theme"
                app:iconSpaceReserved="false" />
            <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="pref_key_theme_amoled_black"
                android:layout="@layout/preference_checkbox"
                android:title="@string/pref_theme_black_background"
                app:iconSpaceReserved="false" />
            <Preference
                android:enabled="false"
                android:selectable="false"
                android:singleLineTitle="false"
                android:title="@string/pref_theme_dynamic_colors_explanation"
                app:iconSpaceReserved="false" />
        </PreferenceScreen>

        <PreferenceScreen
            android:key="language_category"
            android:title="@string/language_and_region_prefs"
            app:iconSpaceReserved="false">
            <ListPreference
                android:defaultValue="default"
                android:entries="@array/pref_language_options"
                android:entryValues="@array/pref_language_values"
                android:key="language"
                android:summary="%s"
                android:title="@string/pref_title_language"
                app:iconSpaceReserved="false" />
            <ListPreference
                android:defaultValue="metric"
                android:entries="@array/pref_entries_unit_system"
                android:entryValues="@array/pref_values_unit_system"
                android:key="measurement_system"
                android:summary="%s"
                android:title="@string/pref_title_unit_system"
                app:iconSpaceReserved="false" />
            <PreferenceScreen
                android:key="pref_screen_rtl"
                android:title="@string/preferences_rtl_settings"
                app:iconSpaceReserved="false">
                <SwitchPreferenceCompat
                    android:defaultValue="false"
                    android:key="rtl"
                    android:layout="@layout/preference_checkbox"
                    android:summary="@string/pref_summary_rtl"
                    android:title="@string/pref_title_rtl"
                    app:iconSpaceReserved="false" />
                <SwitchPreferenceCompat
                    android:defaultValue="false"
                    android:key="contextualArabic"
                    android:layout="@layout/preference_checkbox"
                    android:summary="@string/pref_summary_contextual_arabic"
                    android:title="@string/pref_title_contextual_arabic"
                    app:iconSpaceReserved="false" />
                <EditTextPreference
                    android:defaultValue="20"
                    android:inputType="number"
                    android:key="rtl_max_line_length"
                    android:maxLength="159"
                    android:summary="@string/pref_rtl_max_line_length_summary"
                    android:title="@string/pref_rtl_max_line_length"
                    app:iconSpaceReserved="false" />
            </PreferenceScreen>
        </PreferenceScreen>

        <PreferenceScreen
            android:key="pref_screen_weather"
            android:summary="@string/pref_title_weather_summary"
            android:title="@string/pref_title_weather"
            app:iconSpaceReserved="false">

            <EditTextPreference
                android:inputType="text"
                android:key="weather_city"
                android:title="@string/pref_title_weather_location"
                app:iconSpaceReserved="false"
                app:useSimpleSummaryProvider="true" />
        </PreferenceScreen>

    </PreferenceCategory>

    <Preference
        android:key="pref_category_activity_personal"
        android:title="@string/activity_prefs_about_you"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="pref_charts"
        android:title="@string/activity_prefs_charts"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="pref_key_datetime"
        android:title="@string/pref_header_datetime"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="datetime_synconconnect"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_datetime_syctimeonconnect"
            android:title="@string/pref_title_datetime_syctimeonconnect"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_location"
        app:iconSpaceReserved="false">
        <Preference
            android:key="location_aquire"
            android:title="@string/pref_title_location_aquire"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal|numberSigned"
            android:key="location_latitude"
            android:maxLength="7"
            android:title="@string/pref_title_location_latitude"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="0"
            android:inputType="numberDecimal|numberSigned"
            android:key="location_longitude"
            android:maxLength="7"
            android:title="@string/pref_title_location_longitude"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:dependency="location_aquire"
            android:key="use_updated_location_if_available"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_summary_location_keep_uptodate"
            android:title="@string/pref_title_location_keep_uptodate"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="pref_key_opentracks_packagename"
            android:summary="@string/pref_summary_opentracks_packagename"
            android:title="@string/pref_title_opentracks_packagename"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_header_navigation"
        app:iconSpaceReserved="false">
        <PreferenceScreen
            android:key="navigation_settings"
            android:title="@string/pref_title_navigation_prefs"
            app:iconSpaceReserved="false">
            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="navigation_forward"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/pref_summary_navigation_forward"
                android:title="@string/pref_title_navigation_forward"
                app:iconSpaceReserved="false" />
            <SwitchPreferenceCompat
                android:defaultValue="true"
                android:dependency="navigation_forward"
                android:key="nagivation_screen_on"
                android:layout="@layout/preference_checkbox"
                android:title="@string/pref_title_whenscreenon"
                app:iconSpaceReserved="false" />
            <ListPreference
                android:defaultValue="autodetect"
                android:entries="@array/osmand_package_names"
                android:entryValues="@array/osmand_package_names_values"
                android:key="pref_key_osmand_packagename"
                android:summary="@string/pref_summary_osmand_packagename"
                android:title="@string/pref_title_osmand_packagename"
                app:iconSpaceReserved="false" />
            <PreferenceCategory
                android:key="navigation_apps_selection"
                android:title="@string/pref_title_navigation_apps"
                app:iconSpaceReserved="false">
                <SwitchPreferenceCompat
                    android:defaultValue="true"
                    android:key="navigation_app_osmand"
                    android:layout="@layout/preference_checkbox"
                    android:title="@string/pref_navigation_app_osmand"
                    app:iconSpaceReserved="false" />
                <SwitchPreferenceCompat
                    android:defaultValue="true"
                    android:key="navigation_app_gmaps"
                    android:layout="@layout/preference_checkbox"
                    android:title="@string/pref_navigation_app_gmaps"
                    app:iconSpaceReserved="false" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_device_specific_settings"
        app:iconSpaceReserved="false">

        <Preference
            android:icon="@drawable/ic_device_pebble"
            android:key="pref_key_pebble"
            android:title="@string/pref_title_pebble_settings">
        </Preference>
        <Preference
            android:icon="@drawable/ic_device_zetime"
            android:key="pref_key_zetime"
            android:title="@string/zetime_title_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_auto_export"
        app:iconSpaceReserved="false">
        <Preference
            android:key="auto_export_location"
            android:summary="%s"
            android:title="@string/pref_title_auto_export_location"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_export_enabled"
            android:layout="@layout/preference_checkbox"
            android:title="@string/pref_title_auto_export_enabled"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue="3"
            android:dependency="auto_export_enabled"
            android:inputType="number"
            android:key="auto_export_interval"
            android:maxLength="3"
            android:summary="@string/pref_summary_auto_export_interval"
            android:title="@string/pref_title_auto_export_interval"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_auto_fetch"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="auto_fetch_enabled"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_auto_fetch_summary"
            android:title="@string/pref_auto_fetch"
            app:iconSpaceReserved="false" />
        <EditTextPreference
            android:defaultValue="0"
            android:dependency="auto_fetch_enabled"
            android:inputType="number"
            android:key="auto_fetch_interval_limit"
            android:maxLength="3"
            android:summary="@string/pref_auto_fetch_limit_fetches_summary"
            android:title="@string/pref_auto_fetch_limit_fetches"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_development"
        android:title="@string/pref_header_development"
        app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="log_to_file"
            android:layout="@layout/preference_checkbox"
            android:title="@string/pref_write_logfiles"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="permission_pestering"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_check_permission_status_summary"
            android:title="@string/pref_check_permission_status"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_changelog"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_show_changelog_summary"
            android:title="@string/pref_show_changelog"
            app:iconSpaceReserved="false" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="cache_weather"
            android:layout="@layout/preference_checkbox"
            android:summary="@string/pref_cache_weather_summary"
            android:title="@string/pref_cache_weather"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="pref_discovery_pairing"
            android:title="@string/activity_prefs_discovery_pairing"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceScreen
        android:key="pref_screen_intent_api"
        android:title="@string/pref_header_intent_api"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pref_key_intent_api"
            android:title="@string/pref_header_intent_api"
            app:iconSpaceReserved="false">

            <SwitchPreferenceCompat
                android:key="prefs_key_allow_bluetooth_intent_api"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/activity_prefs_summary_allow_bluetooth_intent_api"
                android:title="@string/activity_prefs_allow_bluetooth_intent_api"
                app:iconSpaceReserved="false" />

            <SwitchPreferenceCompat
                android:key="intent_api_allow_activity_sync"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/intent_api_allow_activity_sync_summary"
                android:title="@string/intent_api_allow_activity_sync_title"
                app:iconSpaceReserved="false" />

            <SwitchPreferenceCompat
                android:key="intent_api_broadcast_activity_sync"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/intent_api_broadcast_activity_sync_summary"
                android:title="@string/intent_api_broadcast_activity_sync_title"
                app:iconSpaceReserved="false" />

            <SwitchPreferenceCompat
                android:key="intent_api_allow_trigger_export"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/intent_api_allow_trigger_export_summary"
                android:title="@string/intent_api_allow_trigger_export_title"
                app:iconSpaceReserved="false" />

            <SwitchPreferenceCompat
                android:key="intent_api_broadcast_export"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/intent_api_broadcast_export_summary"
                android:title="@string/intent_api_broadcast_export_title"
                app:iconSpaceReserved="false" />

            <SwitchPreferenceCompat
                android:key="intent_api_allow_debug_commands"
                android:layout="@layout/preference_checkbox"
                android:summary="@string/intent_api_allow_debug_commands_summary"
                android:title="@string/intent_api_allow_debug_commands_title"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>
