<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_gps_location"
        android:key="banglejs_gps_update"
        android:summary="@string/pref_summary_banglejs_phone_gps_enbale"
        android:title="@string/pref_title_banglejs_phone_gps_enbale" />
    <EditTextPreference
        android:defaultValue="1000"
        android:inputType="number"
        android:icon="@drawable/ic_access_time"
        android:key="banglejs_gps_update_interval"
        android:summary="@string/pref_summary_banglejs_phone_gps_update_interval"
        android:title="@string/pref_title_banglejs_phone_gps_update_interval" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_gps_location"
        android:key="banglejs_gps_use_network_only"
        android:summary="@string/pref_summary_banglejs_phone_gps_network_only"
        android:title="@string/pref_title_banglejs_phone_gps_network_only" />

    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_translate"
        android:key="banglejs_text_bitmap"
        android:summary="@string/pref_summary_banglejs_text_bitmap"
        android:title="@string/pref_title_banglejs_text_bitmap" />
    <EditTextPreference
        android:defaultValue="18"
        android:inputType="number"
        android:icon="@drawable/ic_font_size"
        android:key="banglejs_txt_bitmap_size"
        android:summary="@string/pref_summary_banglejs_txt_bitmap_size"
        android:title="@string/pref_title_banglejs_txt_bitmap_size" />
    <EditTextPreference
        android:defaultValue=""
        android:icon="@drawable/ic_link"
        android:key="banglejs_webview_url"
        android:summary="@string/pref_summary_banglejs_webview_url"
        android:title="@string/pref_title_banglejs_webview_url" />
</androidx.preference.PreferenceScreen>
